Commit to push on GitHub and work from elsewhere

--- a/WiDroid/App.xaml
+++ b/WiDroid/App.xaml
@@ -2,8 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WiDroid"
+             xmlns:views="clr-namespace:WiDroid.Views"
+             xmlns:viewModels="clr-namespace:WiDroid.ViewModels"
              Startup="App_OnStartup">
     <Application.Resources>
-         
+         <!-- Page DataTemplates -->
+        <DataTemplate DataType="{x:Type viewModels:SettingsViewModel}">
+            <views:SettingsView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
