- Fixed some UI stuff in SettingsView.xaml

--- a/WiDroid/Views/SettingsView.xaml
+++ b/WiDroid/Views/SettingsView.xaml
@@ -10,19 +10,23 @@
         <Style TargetType="Image">
             <Setter Property="Height" Value="16" />
             <Setter Property="Width" Value="16" />
+            <Setter Property="Margin" Value="10,0,0,0" />
         </Style>
     </UserControl.Resources>
     
     <Grid>
         <Grid.RowDefinitions>
-
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="95*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="95*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid>
+        <Grid Grid.Column="1" Grid.Row="1">
             <Grid.RowDefinitions>
+                <!-- One Row per menu item -->
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -34,9 +38,8 @@
             <Label Grid.Column="0">Discovery Port:</Label>
             <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Left">
                 <TextBox Width="60" Text="{Binding DiscoveryPort}"/>
-                <Image Source="pack://application:,,,/Resources/Icons/icon_help_128x128.png" Stretch="Fill" StretchDirection="UpOnly"/>
+                <Image Source="pack://application:,,,/Resources/Icons/icon_help_128x128.png" Stretch="Fill"/>
             </StackPanel>
-
         </Grid>
     </Grid>
 </UserControl>
