- Added the view/viewmodel to sync files, it's empty for now

--- a/WiDroid/App.xaml
+++ b/WiDroid/App.xaml
@@ -10,5 +10,8 @@
         <DataTemplate DataType="{x:Type viewModels:SettingsViewModel}">
             <views:SettingsView/>
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:FileTransferViewModel}">
+            <views:FileTransferView/>
+        </DataTemplate>
     </Application.Resources>
 </Application>
